--- a/src/pages/404/404.hbs
+++ b/src/pages/404/404.hbs
@@ -1,7 +1,7 @@
-<div class="page-main page-500 bg-grey">
-    <div class="big-text">400</div>
-    <div class="main-text">Страница не найдена</div>
-    <div class="page-500__btn-container">
-        {{> button lable="Назад к чатам"}}
+<div class="page-main page-404 bg-grey error-page">
+    <div class="big-text">404</div>
+    <div class="main-text error-page__text">Страница не найдена</div>
+    <div class="page-404__btn-container">
+        {{> button lable="Назад к чатам" href="/#/chats"}}
     </div>
 </div>
