--- a/src/pages/singIn/singIn.hbs
+++ b/src/pages/singIn/singIn.hbs
@@ -1,15 +1,17 @@
 <div class="page-main singIn bg-grey">
-    <div class="singIn__container">
-        <h1 class="singIn__titel h1">Вход</h1>
-        <div class="singIn__login">
-            {{> input type="text" name="login"}}
+    <div class="wrapper">
+        <div class="singIn__container container">
+            <h1 class="singIn__titel h1">Вход</h1>
+            <div class="frm__input">
+                {{> input type="text" name="login" label="Логин"}}
+            </div>
+            <div class="frm__input">
+                {{> input type="password" name="pswd" label="Пароль"}}
+            </div>
+            <div class="frm__btn-container">
+                {{> button lable="Авторизоваться" href="/#/chats"}}
+                <a href="/#/registration" class="link frm__link">Нет аккаута?</a>
+            </div>
         </div>
-        <div class="singIn__pswd">
-            {{> input type="password" name="pswd"}}
-        </div>
-        <div class="singIn__btn-container">
-            {{> button lable="Авторизоваться" href="/#/chats"}}
-            <a href="/#/registration">Нет аккаута?</a>
-        </div>
-    </div>
+    </div>   
 </div>
