--- a/src/pages/singUp/singUp.hbs
+++ b/src/pages/singUp/singUp.hbs
@@ -1,30 +1,33 @@
 <div class="page-main singUp bg-grey">
-    <div class="singUp__container">
-        <h1 class="singUp__titel h1">Зарегистрироваться</h1>
-        <div class="singUp__input">
-                {{> input type="text" name="email"}}
-        </div>
-        <div class="singUp__input">
-                {{> input type="text" name="login"}}
-        </div>
-        <div class="singUp__input">
-                {{> input type="text" name="name"}}
-        </div>
-        <div class="singUp__input">
-                {{> input type="text" name="surname"}}
-        </div>
-        <div class="singUp__input">
-                {{> input type="text" name="tel"}}
-        </div>
-        <div class="singUp__input">
-                {{> input type="password" name="pswd"}}
-        </div>
-        <div class="singUp__input">
-                {{> input type="password" name="repswd"}}
-        </div>
-        <div class="singUp__btn-container">
-            {{> button lable="Авторизоваться" href="/#/chats"}}
-            <a href="/#/auth">Войти</a>
+    <div class="wrapper">
+        <div class="singUp__container container ">
+            <h1 class="singUp__titel h1">Зарегистрироваться</h1>
+            <div class="frm__input">
+                {{> input type="text" name="email" label="Почта"}}
+            </div>
+            <div class="frm__input">
+                {{> input type="text" name="login" label="Логин"}}
+            </div>
+            <div class="frm__input">
+                {{> input type="text" name="name" label="Имя"}}
+            </div>
+            <div class="frm__input">
+                {{> input type="text" name="surname" label="Фамилия"}}
+            </div>
+            <div class="frm__input">
+                {{> input type="nimber" name="tel" label="Телефон"}}
+            </div>
+            <div class="frm__input">
+                {{> input type="password" name="pswd" label="Пароль"}}
+            </div>
+            <div class="frm__input">
+                {{> input type="password" name="repswd" label="Поаторите пароль"}}
+            </div>
+            <div class="frm__btn-container">
+                {{> button lable="Авторизоваться" href="/#/chats"}}
+                <a href="/#/auth" class="link frm__link">Войти</a>
+            </div>
         </div>
     </div>
+    
 </div>
