--- a/src/style/glob/glob.scss
+++ b/src/style/glob/glob.scss
@@ -1,11 +1,83 @@
-h1 {
+@import  './color.scss';
+body {
     font-family: 'Open Sans';
+    font-style: normal;
+    font-size: 14px;
+    margin: 0;
+}
+h1 {
     font-style: normal;
     font-weight: 600;
     font-size: 26px;
     line-height: 35px;
+    color: $color-black;
+}
+.text-defult {
+    font-weight: 600;
+    font-size: 16px;
+    line-height: 16px;
+}
+.big-text {
+    font-weight: 500;
+    font-size: 128px;
+    letter-spacing: 0.2em;
+    color: $color-blue-dark;
 }
 .bg-grey {
-    background-color: #E9EDF0;
+    background-color: $color-gray;
     height: 100vh;
+    width: 100%;
+}
+.container {
+    width: 374px;
+    background-color: $color-white;
+    box-shadow: 0 0 5px $color-blue;
+    margin: 0 auto;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    border-radius: 10px;
+    padding: 26px 0;
+}
+.wrapper {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100%;
+}
+.link {
+    color: $color-blue;
+    text-decoration: none;
+    font-style: normal;
+    font-weight: 600;
+    font-size: 14px;
+    line-height: 19px;
+    padding-bottom: 10px;
+}
+.frm {
+    &__input {
+        padding-top: 24px;
+    }
+    &__btn-container {
+        padding-top: 42px;
+        display: flex;
+        flex-direction: column;
+    }
+    &__link {
+        padding-top: 16px;
+        text-align: center;
+    }
+
+}
+.error-page {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    &__text {
+        padding: 40px 0;
+        font-weight: 500;
+        font-size: 20px;
+    }
+
 }
