--- a/src/pages/profile/profile.hbs
+++ b/src/pages/profile/profile.hbs
@@ -13,16 +13,16 @@
             <input id="input-img" ref="fileInput" type="file" style="display: none;" accept="image/*" />
         </div>
         <div class="profile__info">
-            {{> profile-input type="text" name="login" label="Почта"}}
+            {{> profile-input type="text" name="email" label="Почта"}}
             {{> profile-input type="text" name="login" label="Логин"}}
-            {{> profile-input type="text" name="name" label="Имя"}}
-            {{> profile-input type="text" name="surname" label="Фамилия"}}
-            {{> profile-input type="nimber" name="tel" label="Телефон"}}
-            <div class="profile__pswd">
-                <div class="text-defult">Изменить пароль</div>
-                {{> profile-input type="password" name="pswd" label="Пароль"}}
-                {{> profile-input type="password" name="repswd" label="Поаторите пароль"}}
-            </div>
+            {{> profile-input type="text" name="first_name" label="Имя"}}
+            {{> profile-input type="text" name="second_name" label="Фамилия"}}
+            {{> profile-input type="nimber" name="phone" label="Телефон"}}
+           <div class="profile__pswd">
+               <div class="text-defult">Изменить пароль</div>
+               {{> profile-input type="password" name="oldPassword" label="Старый пароль"}}
+               {{> profile-input type="password" name="newPassword" label="Новый пароль"}}
+           </div>
             <div class="profile__action">
                 {{> button lable="Сохранить"}}
             </div>
