--- a/src/pages/singUp/singUp.hbs
+++ b/src/pages/singUp/singUp.hbs
@@ -9,19 +9,19 @@
                 {{> input type="text" name="login" label="Логин"}}
             </div>
             <div class="frm__input">
-                {{> input type="text" name="name" label="Имя"}}
+               {{> input type="text" name="first_name" label="Имя"}}
             </div>
             <div class="frm__input">
-                {{> input type="text" name="surname" label="Фамилия"}}
+                {{> input type="text" name="second_name" label="Фамилия"}}
             </div>
             <div class="frm__input">
-                {{> input type="nimber" name="tel" label="Телефон"}}
+                {{> input type="nimber" name="phone" label="Телефон"}}
             </div>
             <div class="frm__input">
-                {{> input type="password" name="pswd" label="Пароль"}}
+                {{> input type="password" name="password" label="Пароль"}}
             </div>
             <div class="frm__input">
-                {{> input type="password" name="repswd" label="Поаторите пароль"}}
+                {{> input type="password" name="password" label="Поаторите пароль"}}
             </div>
             <div class="frm__btn-container">
                 {{> button lable="Авторизоваться" href="/#/chats"}}
