Добавлен компонентный подход

--- a/src/pages/profile/profile-input/profile-input.scss
+++ b/src/pages/profile/profile-input/profile-input.scss
@@ -1,10 +1,11 @@
-// @import  '../../style/glob/color.scss';
+@import '../../../style/glob/color.scss';
+
 .Input-profile {
     width: 100%;
     display: block;
     &__wraper {
         width: 100%;
-        border-bottom: 1px solid #EAEAEA;
+        border-bottom: 1px solid $color-gray-super-light;
         padding: 10px 0;
         display: flex;
         justify-content: space-between;
