--- a/src/style/glob/color.scss
+++ b/src/style/glob/color.scss
@@ -5,4 +5,5 @@ $color-gray: #E9EDF0;
 $color-red: #E45B52;
 $color-black: #2A394E;
 $color-white: #fff;
-$color-gray-light: #FDFDFD
+$color-gray-light: #F8F8F8;
+$color-gray-super-light: #EAEAEA;
