--- a/src/style/glob/glob.scss
+++ b/src/style/glob/glob.scss
@@ -93,3 +93,13 @@ ul {
         
     }
 }
+nav {
+    list-style: none;
+    padding: 0;
+    margin: 0;
+    > li {
+        padding: 0;
+        margin: 0;
+        
+    }
+}
